opam-version: "2.0"
version: "1.0"
maintainer: "benfaerber@yada.yada"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "Apache-2.0"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]