opam-version: "2.0"
name: "liquid_interpreter"
version: "0.1"
synopsis: "The interpreter for Liquid"
description: """
The interpreter for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [ 
    "ocaml" { >= "4.11" }
    "base" { >= "2.5" } 
    "core" 
    "stdio" 
    "re2" 
    "liquid_syntax" { = "0.1"} 
    "liquid_parser" { = "0.1"}
    "liquid_std" { = "0.1"}
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
