opam-version: "2.0"
name: "liquid"
version: "0.1"
synopsis: "Shopify's Liquid templating language in OCaml"
description: """
Shopify's Liquid templating language for the OCaml!
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [ "base" "core" "stdio" "liquid_syntax" "liquid_parser" "liquid_interpreter" ]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]