opam-version: "2.0"
name: "liquid_std"
version: "0.1"
synopsis: "The Standard Libarary for Liquid"
description: """
The Standard Libarary for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [ 
    "ocaml" { >= "4.11" }
    "dune" { >= "2.5" } 
    "base"
    "core" 
    "stdio" 
    "re2"
    "calendar"
    "base64"
    "sha"
    "liquid_syntax" { = "0.1"} 
    "liquid_parser" { = "0.1"}
    "liquid_syntax" { = "0.1"} 
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
