opam-version: "2.0"
name: "liquid_std"
version: "0.1.2"
synopsis: "The Standard Libarary for Liquid"
description: """
The Standard Libarary for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [
    "ocaml" { >= "4.11" }
    "dune" { >= "2.5" }
    "base" { >= "0.15.0" }
    "core" { >= "0.15.0" }
    "stdio" { >= "0.15.0" }
    "re2" { >= "0.13.0" }
    "base64" { >= "3.5.1" }
    "sha" { >= "1.0" }
    "liquid_syntax" { = version }
    "liquid_parser" { = version }
    "liquid_syntax" { = version }
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
