opam-version: "2.0"
name: "liquid_syntax"
version: "0.1"
synopsis: "The Syntax Definitions for Liquid"
description: """
The Syntax Definitions for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [ 
    "ocaml" { >= "4.11" }
    "dune" { >= "2.5" }
    "base" 
    "core" 
    "stdio" 
    "batteries" 
    "re2" 
    "calendar" 
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
