opam-version: "2.0"
name: "liquid_syntax"
version: "0.1.1"
synopsis: "The Syntax Definitions for Liquid"
description: """
The Syntax Definitions for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [ 
    "ocaml" { >= "4.11" }
    "dune" { >= "2.5" }
    "base" { >= "0.15.0" }
    "core" { >= "0.15.0" } 
    "stdio" { >= "0.10.0" } 
    "re2" { >= "0.13.0" }
    "batteries" { >= "3.1.0" } 
    "calendar" { >= "3.0.0"}
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
