opam-version: "2.0"
name: "liquid_syntax"
version: "0.1.3"
synopsis: "The Syntax Definitions for Liquid"
description: """
The Syntax Definitions for Liquid
"""
maintainer: "faerberbendev@protonmail.com"
authors: ["Ben Faerber"]
homepage: "https://github.com/benfaerber/liquid-ml"
bug-reports: "https://github.com/benfaerber/liquid-ml/issues"
dev-repo: "git+https://github.com/benfaerber/liquid-ml.git"
license: "MIT"
depends: [
    "ocaml" { >= "4.11" }
    "dune" { >= "2.5" }
    "base" { >= "v0.15.0" }
    "core" { >= "v0.15.0" }
    "stdio" { >= "v0.10.0" }
    "re2" { >= "v0.13.0" }
    "calendar" { >= "3.0.0" }
    "ppx_deriving" { >= "5.0" }
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
x-maintenance-intent: ["(latest)"]
